src/objects/Test_Scenario__c.object
<CustomObject>
    <description>TOOLKIT - An object that represents a test situation that verifies the fulfillment of a request.</description>
    <fields>
        <fullName>Capability__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to capability object</description>
        <label>Capability</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Functional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_Users__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>List of Users</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Test Scenarios</relationshipLabel>
        <relationshipName>Test_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Release: Build</fullName>
                </value>
                <value>
                    <fullName>SIT: In Process</fullName>
                </value>
                <value>
                    <fullName>SIT: Pass</fullName>
                </value>
                <value>
                    <fullName>SIT: Fail</fullName>
                </value>
                <value>
                    <fullName>UAT: In Process</fullName>
                </value>
                <value>
                    <fullName>UAT: Pass</fullName>
                </value>
                <value>
                    <fullName>UAT: Fail</fullName>
                </value>
                <value>
                    <fullName>Additional Clarification Requested</fullName>
                </value>
                <value>
                    <fullName>Clarification Provided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Scenario_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Scenario Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test Scenario</label>
    <listViews>
        <fullName>Maintenance1</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Capability__c</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <columns>List_of_Users__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Maintenance 1</value>
        </filters>
        <label>Maintenance 1</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Account_Test_Scenarios</fullName>
        <columns>NAME</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <columns>List_of_Users__c</columns>
        <columns>Capability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Account Management</value>
        </filters>
        <label>Release 3 Account Management Scenarios</label>
    </listViews>
    <listViews>
        <fullName>Release_3_All_Test_Scenarios</fullName>
        <columns>NAME</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <columns>List_of_Users__c</columns>
        <columns>Capability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <label>Release 3 All Test Scenarios</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Case_Management</fullName>
        <columns>NAME</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Status__c</columns>
        <columns>Capability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Case Management</value>
        </filters>
        <label>Release 3 Case Management Scenarios</label>
    </listViews>
    <listViews>
        <fullName>Release_3_LeadTest_Scenarios</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Status__c</columns>
        <columns>Capability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>equals</operation>
            <value>Lead Management</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <label>Release 3 Lead Management Scenarios</label>
    </listViews>
    <listViews>
        <fullName>Release_3_Recruitment_Management</fullName>
        <columns>NAME</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Capability__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>release 3</value>
        </filters>
        <filters>
            <field>Capability__c</field>
            <operation>contains</operation>
            <value>recruiting</value>
        </filters>
        <label>Release 3 Recruiting Management Scenario</label>
    </listViews>
    <listViews>
        <fullName>Release_4_Test_Scenarios</fullName>
        <columns>NAME</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Capability__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 4</value>
        </filters>
        <label>Release 4 Test Scenarios</label>
    </listViews>
    <listViews>
        <fullName>Release_5</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>Capability__c</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>List_of_Users__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 5</value>
        </filters>
        <label>Release 5</label>
    </listViews>
    <listViews>
        <fullName>Release_6</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>Capability__c</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>List_of_Users__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 6</value>
        </filters>
        <label>Release 6</label>
    </listViews>
    <listViews>
        <fullName>Release_7</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>Capability__c</columns>
        <columns>Test_Scenario_Name__c</columns>
        <columns>Description__c</columns>
        <columns>List_of_Users__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Release 7</value>
        </filters>
        <label>Release 7</label>
    </listViews>
    <nameField>
        <displayFormat>TestScenario-{00000000}</displayFormat>
        <label>Test Scenario ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>